--- a/README
+++ b/README
@@ -1,10 +1,9 @@
-
 TkC v.0.1.0
 
 Fetch code from any url and save it to file
 
 
-    Copyright (C) 2011 sugardrunk <http://sugardrunk.devio.us>
+    Copyright (C) 2011 sugardrunk <http://koti.tamk.fi/~c1jkahko/>
 
     This program is free software: you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
